<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <TextView
        android:text="@string/res_nanodegree_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="sans-serif"
        android:textSize="30dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#546E7A"
        android:text="@string/res_spotify_streamer"
        android:id="@+id/button_spotify_streamer" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#546E7A"
        android:text="@string/res_scores_app"
        android:id="@+id/button_scores_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#546E7A"
        android:text="@string/res_library_app"
        android:id="@+id/button_library_app" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#455A64"
        android:text="@string/res_built_it_bigger"
        android:id="@+id/button_built_it_bigger" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#455A64"
        android:text="@string/res_xyz_reader"
        android:id="@+id/button_xyz_reader" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainactivity_button_margin_top"
        android:layout_marginLeft="@dimen/mainactivity_button_margin_left"
        android:layout_marginRight="@dimen/mainactivity_button_margin_right"
        android:padding="15dp"
        android:gravity="center"
        android:background="#263238"
        android:text="@string/res_capstone"
        android:id="@+id/button_capstone" />

    <TextView
        android:text="@string/res_my_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="15dp"
        android:fontFamily="cursive"
        android:textSize="18dp"
        android:textColor="#000000"/>

</LinearLayout>
